fixing the minor alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -241,7 +241,7 @@ header nav .nav-btn:hover {
 
 #quote {
 
-    margin: 40px 192px 40px 192px;
+    margin: 40px 192px 40px 175px;
     width: 1536px;
     height: 256px;
     border: 1px solid rgba(14, 14, 14, 0.15);
